--- a/public/css/style.css
+++ b/public/css/style.css
@@ -38,6 +38,118 @@ h5 {
 p {
   font-size: 15px;
 }
+.ezy__team2 {
+  /* Bootstrap variables */
+  --bs-body-color: #212529 !important;
+  --bs-body-bg: rgb(255, 255, 255) !important;
+
+  /* Easy Frontend variables */
+  --ezy-theme-color: rgb(13, 110, 253) !important;
+  --ezy-theme-color-rgb: 13, 110, 253 !important;
+  --ezy-item-bg: #ffffff !important;
+  --ezy-item-shadow: 0px 4px 44px rgba(159, 190, 218, 0.17) !important;
+
+  background: var(--bs-body-bg) !important;
+  overflow: hidden !important;
+  padding: 60px 0 !important;
+}
+
+@media (min-width: 768px) {
+  .ezy__team2 {
+    padding: 100px 0 !important;
+  }
+}
+
+/* Gray Block Style */
+.gray .ezy__team2,
+.ezy__team2.gray {
+  /* Bootstrap variables */
+  --bs-body-bg: rgb(246, 246, 246) !important;
+
+  /* Easy Frontend variables */
+  --ezy-item-bg: #f6f6f6 !important;
+  --ezy-item-shadow: 0px 4px 44px rgba(199, 227, 252, 0.17) !important;
+}
+
+/* Dark Gray Block Style */
+.dark-gray .ezy__team2,
+.ezy__team2.dark-gray {
+  /* Bootstrap variables */
+  --bs-body-color: #ffffff !important;
+  --bs-body-bg: rgb(30, 39, 53) !important;
+
+  /* Easy Frontend variables */
+  --ezy-item-bg: #283646 !important;
+  --ezy-item-shadow: none !important;
+}
+
+/* Dark Block Style */
+.dark .ezy__team2,
+.ezy__team2.dark {
+  /* Bootstrap variables */
+  --bs-body-color: #ffffff !important;
+  --bs-body-bg: rgb(11, 23, 39) !important;
+
+  /* Easy Frontend variables */
+  --ezy-item-bg: #162231 !important;
+  --ezy-item-shadow: none !important;
+}
+
+.ezy__team2-heading {
+  font-weight: bold !important;
+  font-size: 25px !important;
+  line-height: 25px !important;
+  color: var(--bs-body-color) !important;
+}
+
+@media (min-width: 768px) {
+  .ezy__team2-heading {
+    font-size: 45px !important;
+    line-height: 45px !important;
+  }
+}
+
+.ezy__team2-sub-heading {
+  font-size: 16px !important;
+  line-height: 22px !important;
+  color: var(--bs-body-color) !important;
+}
+
+.ezy__team2-content * {
+  color: var(--bs-body-color) !important;
+}
+
+.ezy__team2-social-links a {
+  display: inline-block !important;
+  margin: 10px !important;
+  opacity: 0.6 !important;
+  transition: opacity 0.25s ease-in-out, transform 0.25s ease-in-out, color 0.25s ease-in-out !important;
+}
+
+.ezy__team2-social-links a:hover {
+  transform: translateY(5px) !important;
+  color: var(--bs-body-color) !important;
+  opacity: 1 !important;
+}
+
+.ezy__testimonial16-arrow {
+  position: absolute !important;
+  top: 50% !important;
+  transform: translateY(-50%) !important;
+  font-size: 2rem !important;
+  z-index: 1 !important;
+  color: #333 !important;
+  cursor: pointer !important;
+}
+
+.carousel-control-prev {
+  left: -50px  !important;  
+}
+
+.carousel-control-next {
+  right: -50px !important; /* Adjust the position */
+}
+
 p.intro {
   margin: 12px 0 0;
   line-height: 24px;
